log.txt
ExecSQLtuples(): SQL command failed: SELECT pr.id, pr.descrizione, pr.nome, pr.prezzo, fr.nome AS nomeF FROM prodotto pr, fornitore fr WHERE pr.fornitore = fr.id
ExecSQLtuples(): PGRES_FATAL_ERROR



ricerca ordini trasportatore:
ExecSQLtuples(): SQL command failed: SELECT ord.id, cst.nome, ord.datarich, ord.stato, ord.pagamento, ord.indirizzo, ord.totale FROM Ordine ord, Customer cst WHERE cst.id = ord.customer AND ord.id NOT IN (SELECT id FROM ordineconse) AND ord.id NOT IN (SELECT ordine FROM consegna)
ExecSQLtuples(): PGRES_FATAL_ERROR




outes.cpp: In function ‘void defineRoutes(Pistache::Rest::Router&)’:
routes.cpp:9:56: error: could not convert ‘authenticateUser’ from ‘void (*)(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)’ to ‘Pistache::Rest::Route::Handler’ {aka ‘std::function<Pistache::Rest::Route::Result(Pistache::Rest::Request, Pistache::Http::ResponseWriter)>’}
    9 |     Pistache::Rest::Routes::Post(router, "/autentica", authenticateUser);
      |                                                        ^~~~~~~~~~~~~~~~
      |                                                        |
      |                                                        void (*)(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)
routes.cpp:10:59: error: could not convert ‘modificaNomeHttp’ from ‘void (*)(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)’ to ‘Pistache::Rest::Route::Handler’ {aka ‘std::function<Pistache::Rest::Route::Result(Pistache::Rest::Request, Pistache::Http::ResponseWriter)>’}
   10 |     Pistache::Rest::Routes::Post(router, "/modificaNome", modificaNomeHttp);
      |                                                           ^~~~~~~~~~~~~~~~
      |                                                           |
      |                                                           void (*)(const Pistache::Rest::Request&, Pistache::Http::ResponseWriter)
make: *** [Makefile:45: api] Errore 1
federica@federica-VirtualBox:~/mewing/servers/Customer/src$ 




